deploy/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdxp-campaign-service
spec:
  selector:
    name: cdxp-campaign-service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
