deploy/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdxp-campaign-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/https-redirect-status-code: "301"
    konghq.com/protocols: https
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - cdxp-api.betalabs.ai
      secretName: cdxp-api-betalabs-ai
  rules:
    - host: stg-cdxp-api.betalabs.ai
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: cdxp-campaign-service
                port:
                  name: http
